{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 44,
  "lineage": "75a38b07-321c-d9cd-ab8a-4e2398641c4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:491264544825:instance/i-0f9e601adff2e9ed4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9e601adff2e9ed4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "virKP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ddde765636d7041",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-44-201-2-16.compute-1.amazonaws.com",
            "public_ip": "44.201.2.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04babf93d79f4153d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed366551a05a81f0",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fe9b1fb70f8c1197"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_jenkins",
            "aws_subnet.subnet_Jenkins",
            "aws_vpc.VPC_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491264544825:internet-gateway/igw-0671538dc5245bb3a",
            "id": "igw-0671538dc5245bb3a",
            "owner_id": "491264544825",
            "tags": {
              "Name": "IGW_jenkins"
            },
            "tags_all": {
              "Name": "IGW_jenkins"
            },
            "vpc_id": "vpc-0fd3fee7f35cd4a59"
          },
          "dependencies": [
            "aws_vpc.VPC_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Jenkins_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491264544825:route-table/rtb-0fe83867e5b81c688",
            "id": "rtb-0fe83867e5b81c688",
            "owner_id": "491264544825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0671538dc5245bb3a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Jenkins_Rt"
            },
            "tags_all": {
              "Name": "Jenkins_Rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd3fee7f35cd4a59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW_jenkins",
            "aws_vpc.VPC_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095542509acb8b8d9",
            "route_table_id": "rtb-0fe83867e5b81c688",
            "subnet_id": "subnet-0ed366551a05a81f0"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_jenkins",
            "aws_route_table.Jenkins_RouteTable",
            "aws_subnet.subnet_Jenkins",
            "aws_vpc.VPC_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491264544825:security-group/sg-0fe9b1fb70f8c1197",
            "description": "To allow inbound and outbound traffic to mylab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe9b1fb70f8c1197",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "Jenkins Security Group",
            "name_prefix": "",
            "owner_id": "491264544825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd3fee7f35cd4a59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491264544825:subnet/subnet-0ed366551a05a81f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed366551a05a81f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491264544825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_jenkins"
            },
            "tags_all": {
              "Name": "subnet_jenkins"
            },
            "vpc_id": "vpc-0fd3fee7f35cd4a59"
          },
          "dependencies": [
            "aws_vpc.VPC_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491264544825:vpc/vpc-0fd3fee7f35cd4a59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0793ee515e748d604",
            "default_route_table_id": "rtb-0d96fcc429f5179f8",
            "default_security_group_id": "sg-088ba2d994d7472f8",
            "dhcp_options_id": "dopt-0c1b4650f024e7c94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fd3fee7f35cd4a59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d96fcc429f5179f8",
            "owner_id": "491264544825",
            "tags": {
              "Name": "Jenkins-VPC"
            },
            "tags_all": {
              "Name": "Jenkins-VPC"
            }
          }
        }
      ]
    }
  ]
}